# ABR_PDF_entities_extraction_to_postgres_LLM

./: .dockerignore  .env.example  .gitignore  Dockerfile.cpu  README.md  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements.txt
sql/: init.sql
src/abr_import/: __main__.py  config.py
src/abr_import/db/: models.py  repository.py  session.py
src/abr_import/extract/: parsers.py  sections.py
src/abr_import/llm/: chunking.py  extractor.py  ollama_client.py
src/abr_import/ocr/: engine.py  pdf_reader.py
src/abr_import/pipeline/: processor.py  zip_loader.py
